--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-title" content="SnapSpend" />
     <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/2921/2921226.png" />
 
-    <!-- Tailwind CSS (Kept via CDN for simplicity in this setup) -->
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* Hide scrollbar for Chrome, Safari and Opera */
@@ -46,7 +46,6 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
